--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,12 @@ services:
         - 3000:3000
     volumes:
         - ./create-react-app/:/home/node/app
+  app2:
+    image: node:16.0.0-buster
+    working_dir: /home/node/app
+    user: '1000'
+    command: sh -c 'npm install && npm start'
+    ports:
+        - 3000:3000
+    volumes:
+        - ./router/:/home/node/app
